Update and rename 2023-03-24_start.md to 2023-03-24-start.md

--- a/_posts/2023-03-24-start.md
+++ b/_posts/2023-03-24-start.md
@@ -3,6 +3,7 @@ layout: post
 title: Move my blog from tistory to github
 ---
 
-let's start
+let's start  (shown below).
+
 https://user-images.githubusercontent.com/46152199/225559010-1472ba46-2c71-4ae1-9ab7-70542cf906a7.png
 
